--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Method::ParamValidator
 
+0.03   Tue Dec 08 10:35:00 2015
+       - Fixed issue RT: 110111 raised by SREZIC.
+
 0.02   Mon Dec 07 11:10:00 2015
        - Fixed issue RT: 110110 raised by SREZIC.
 
