--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Method::ParamValidator
 
+0.05   Thu Dec 10 10:40:00 2015
+       - Fixed inconsistent versions.
+
 0.04   Wed Dec 09 10:40:00 2015
        - Fixed code in the pod section "SYNOPSIS" of the package Method::ParamValidator.
 
