--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Method::ParamValidator
 
+0.12   Sun Oct 21 09:30:00 2018
+       - Used namespace::autoclean.
+
 0.11   Wed Jun 07 10:00:00 2017
        - Tidied up attribute definitions.
 
