--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Method::ParamValidator
 
+0.14   Thu Dec 13 08:40:00 2018
+       - Tidied up SYNOPSIS code.
+
 0.13   Wed Dec 12 11:00:00 2018
        - Making use of Test::Exception in unit test.
 
