--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Method::ParamValidator
 
+0.16   Wed Oct 09 19:05:00 2019
+       - Moved author test scripts to xt/ subfolder.
+
 0.15   Fri Dec 14 06:40:00 2018
        - Fixed typo in the pod.
 
